--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,10 @@
         <script src="/static/js/components/navbar/navbar.js"></script>
         <script src="/static/js/components/posts/posts.js"></script>
         <script src="/static/js/components/posts/post.js"></script>
+        <script src="/static/js/components/posts/create_post.js"></script>
         <script src="/static/js/components/filters/filters_nav.js"></script>
         <script src="/static/js/components/users/users_nav.js"></script>
+        
         <script src="/static/js/app.js"></script>
     </body>
 
