Add profile script to index.html for profile functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
         <script src="/static/js/components/posts/post.js"></script>
         <script src="/static/js/components/posts/create_post.js"></script>
         <script src="/static/js/components/posts/edit_post.js"></script>
+        <script src="/static/js/components/profile/profile.js"></script>
         <script src="/static/js/components/filters/filters_nav.js"></script>
         <script src="/static/js/components/users/users_nav.js"></script>
         
